# scanIt

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  AI_ENHANCEMENT.md  AI_PROVIDER_ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md  KANBAN.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  start-local.ps1
.github/: dependabot.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  demo_tiers.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: m6_001_multi_tenant.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  dashboard.py  deps.py  llm.py  middleware.py  rate_limit.py  results.py  tasks.py  tenants.py  works.py
backend/app/core/: celery_app.py  config.py  logging.py  metrics.py  sentry.py
backend/app/engines/: __init__.py  detector.py  detector_llm.py
backend/app/engines/comparators/: __init__.py  base.py  image.py  text.py  video.py
backend/app/engines/llm_provider/: __init__.py  base.py  cloud.py  local.py  manager.py
backend/app/engines/searchers/: __init__.py  baidu.py  base.py  bing.py  bocha.py  google.py  selector.py
backend/app/models/: __init__.py  base.py  result.py  task.py  tenant.py  user.py  work.py
backend/app/schemas/: __init__.py  auth.py  result.py  task.py  tenant.py  user.py  work.py
backend/app/tasks/: __init__.py  alert.py  detection.py  maintenance.py  report.py
backend/scripts/: init_sqlite.py  migrate_default_tenant.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_engines.py  test_llm_provider.py  test_models.py
docs/: DESIGN_MULTI_TENANT.md  SEARCH_DEPLOY.md  SEARCH_PROVIDER_DESIGN.md  概要设计.md  需求设计.md
frontend/: .env.example  .eslintrc.cjs  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  sentry.properties  (+1 more)
(+31 files in other folders)
